--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,11 +1,15 @@
-<mvc:View controllerName="CEMOSA.ZYBC_probando.controller.App" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
+<mvc:View controllerName="CEMOSA.ZYBC_probando.controller.App" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" displayBlok="true">
 	<Shell id="shell">
 		<App id="app">
 			<pages>
-				<Page id="page" title="{i18n>title}">
-					<Button text="{i18n>showHelloButtonText}" press=".onShowHello"/>
-					<Input value="{/recipient/name}" description="Hello {/recipient/name}" valueLiveUpdate="true" width="60%"/>
-					<Text class="hC" text="Testing CSS3"/>
+				<Page id="page" title="{i18n>homePageTitle}">
+					<content>
+						<Panel headerText="{i18n>helloPanelTitle}">
+							<Button text="{i18n>showHelloButtonText}" press=".onShowHello"/>
+							<Input value="{/recipient/name}" description="Hello {/recipient/name}" valueLiveUpdate="true" width="60%"/>
+							<Text class="hC" text="Testing CSS3"/>
+						</Panel>
+					</content>
 				</Page>
 			</pages>
 		</App>
