--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,8 +1,8 @@
 /* Enter your custom styles here */
-.hC {
-    color: red;
-    display: block;
-    margin: 8px;
-    border: 1px solid black;
-    border-radius: 5px;
-}
+/*.hC {*/
+/*    color: red;*/
+/*    display: block;*/
+/*    margin: 8px;*/
+/*    border: 1px solid black;*/
+/*    border-radius: 5px;*/
+/*}*/
