--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,3 +1,17 @@
+html[dir="ltr"] .myAppDemoWT .myCustomButton.sapMBtn {
+    margin-right: 0.125rem;
+}
+
+html[dir="rtl"] .myAppDemonWT .myCustomButton.sapMBtn {
+    margin-left: 0.125rem;
+}
+
+.myAppDemoWT .myCustomText {
+    display: inline-block;
+    font-weight: bold;
+}
+
+
 /* Enter your custom styles here */
 /*.hC {*/
 /*    color: red;*/
