--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,13 +1,16 @@
 <mvc:View controllerName="CEMOSA.ZYBC_probando.controller.App" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" displayBlok="true">
 	<Shell id="shell">
-		<App id="app">
+		<App id="app" class="myAppDemoWT">
 			<pages>
 				<Page id="page" title="{i18n>homePageTitle}">
 					<content>
 						<Panel headerText="{i18n>helloPanelTitle}" class="sapUiResponsiveMargin" width="auto">
-							<Button text="{i18n>showHelloButtonText}" press=".onShowHello"/>
+							<Button 
+								text="{i18n>showHelloButtonText}" 
+								press=".onShowHello"
+								class="myCustomButton"/>
 							<Input value="{/recipient/name}" description="Hello {/recipient/name}" valueLiveUpdate="true" width="60%"/>
-							<Text text="Hello {/recipient/name}" class="sapUiSmallMargin"/>
+							<Text text="Hello {/recipient/name}" class="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/>
 						</Panel>
 					</content>
 				</Page>
