--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -1,31 +1,20 @@
-<mvc:View
-   controllerName="CEMOSA.ZYBC_probando.controller.InvoiceList"
-   xmlns="sap.m"
-   xmlns:mvc="sap.ui.core.mvc">
-   <List
-      headerText="{i18n>invoiceListTitle}"
-      class="sapUiResponsiveMargin"
-      width="auto"
-      items="{invoice>/Invoices}" >
-      <items>
-         <ObjectListItem
-            title="{invoice>Quantity} x {invoice>ProductName}"
-            number="{
-				parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}],
-				type: 'sap.ui.model.type.Currency',
-				formatOptions: {
-					showMeasure: false
-					}
-				}"
-		numberUnit="{view>/currency}"
-		numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }">
-         	<firstStatus>
-					<ObjectStatus text="{
-						path: 'invoice>Status',
-							formatter: '.formatter.statusText'
-						}"/>
+<mvc:View controllerName="CEMOSA.ZYBC_probando.controller.InvoiceList" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
+	<List id="invoiceList" headerText="{i18n>invoiceListTitle}" class="sapUiResponsiveMargin" width="auto" items="{invoice>/Invoices}">
+		<headerToolbar>
+			<Toolbar>
+				<Title text="{i18n>invoiceListTitle}"/>
+				<ToolbarSpacer/>
+				<SearchField width="50%" search=".onFilterInvoices"/>
+			</Toolbar>
+		</headerToolbar>
+		<items>
+			<ObjectListItem title="{invoice>Quantity} x {invoice>ProductName}"
+				number="{ parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}], type: 'sap.ui.model.type.Currency', formatOptions: { showMeasure: false } }"
+				numberUnit="{view>/currency}" numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }">
+				<firstStatus>
+					<ObjectStatus text="{ path: 'invoice>Status', formatter: '.formatter.statusText' }"/>
 				</firstStatus>
-         </ObjectListItem>
-      </items>
-   </List>
+			</ObjectListItem>
+		</items>
+	</List>
 </mvc:View>
