--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -1,5 +1,10 @@
 <mvc:View controllerName="CEMOSA.ZYBC_probando.controller.InvoiceList" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
-	<List id="invoiceList" headerText="{i18n>invoiceListTitle}" class="sapUiResponsiveMargin" width="auto" items="{invoice>/Invoices}">
+	<List 
+		id="invoiceList" 
+		headerText="{i18n>invoiceListTitle}" 
+		class="sapUiResponsiveMargin" 
+		width="auto" 
+		items="{ path:'invoice>/Invoices', sorter:{path:'ShipperName',group : true} }">
 		<headerToolbar>
 			<Toolbar>
 				<Title text="{i18n>invoiceListTitle}"/>
