--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,20 +1,11 @@
-<mvc:View controllerName="CEMOSA.ZYBC_probando.controller.App" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" displayBlok="true">
+<mvc:View controllerName="CEMOSA.ZYBC_probando.controller.App" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns="sap.m">
 	<Shell id="shell">
-		<App id="app" class="myAppDemoWT">
+		<App id="app">
 			<pages>
-				<Page id="page" title="{i18n>homePageTitle}">
-					<content>
-						<!--<Panel headerText="{i18n>helloPanelTitle}" class="sapUiResponsiveMargin" width="auto">-->
-						<!--	<Button -->
-						<!--		text="{i18n>showHelloButtonText}" -->
-						<!--		press=".onShowHello"-->
-						<!--		class="myCustomButton"/>-->
-						<!--	<Input value="{/recipient/name}" description="Hello {/recipient/name}" valueLiveUpdate="true" width="60%"/>-->
-						<!--	<Text text="Hello {/recipient/name}" class="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/>-->
-						<!--</Panel>-->
-							<mvc:XMLView viewName="CEMOSA.ZYBC_probando.view.HelloPanel"/> 
-							<mvc:XMLView viewName="CEMOSA.ZYBC_probando.view.InvoiceList"/>
-					</content>
+				<Page id="page" title="{i18n>title}">
+					<Button text="{i18n>showHelloButtonText}" press=".onShowHello"/>
+					<Input value="{/recipient/name}" description="Hello {/recipient/name}" valueLiveUpdate="true" width="60%"/>
+					<Text class="hC" text="CEMOSA forever!"/>
 				</Page>
 			</pages>
 		</App>
