--- a/webapp/view/HelloDialog.fragment.xml
+++ b/webapp/view/HelloDialog.fragment.xml
@@ -1,19 +1,10 @@
-<core:FragmentDefinition
-   xmlns="sap.m"
-   xmlns:core="sap.ui.core" >
-   <Dialog
-      id="helloDialog"
-      title="Hello {/recipient/name}">
-   		<content>
-   			<core:Icon
-	            src="sap-icon://hello-world"
-	            size="8rem"
-	            class="sapUiMediumMargin"/>
-    	</content>
-   		<beginButton>
-   			<Button
-   				text="{i18n>dialogCloseButtonText}"
-   				press=".onCloseDialog"/>
-   		</beginButton>
-   </Dialog>
-</core:FragmentDefinition>
+<mvc:View xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" controllerName="CEMOSA.ZYBC_probando.controller.HelloPanel">
+   <Panel headerText="{i18n>helloPanelTitle}" class="sapUiResponsiveMargin" width="auto">
+      <content>
+      	<Button id="helloDialogButton" icon="sap-icon://world" text="{i18n>openDialogButtonText}" press=".onOpenDialog" class="sapUiSmallMarginEnd"/>
+      	<Input value="{/recipient/name}" valueLiveUpdate="true" width="60%"/>
+         <Button text="{i18n>showHelloButtonText}" press=".onShowHello" class="myCustomButton"/>
+         <FormattedText htmlText="Hello {/recipient/name}" class="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/>
+      </content>
+   </Panel>
+</mvc:View>
