Routing and Navigation

--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -13,9 +13,16 @@
 			</Toolbar>
 		</headerToolbar>
 		<items>
-			<ObjectListItem title="{invoice>Quantity} x {invoice>ProductName}"
-				number="{ parts: [{path: 'invoice>ExtendedPrice'}, {path: 'view>/currency'}], type: 'sap.ui.model.type.Currency', formatOptions: { showMeasure: false } }"
-				numberUnit="{view>/currency}" numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }">
+			<ObjectListItem 
+				title="{invoice>Quantity} x {invoice>ProductName}"
+				number="{ parts:[{path: 'invoice>ExtendedPrice'},
+								{path: 'view>/currency'}],
+								type: 'sap.ui.model.type.Currency',
+								formatOptions: { showMeasure: false } }"
+				numberUnit="{view>/currency}" 
+				numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success' }"
+				type="Navigation"
+				press="onPress">
 				<firstStatus>
 					<ObjectStatus text="{ path: 'invoice>Status', formatter: '.formatter.statusText' }"/>
 				</firstStatus>
