--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,9 +1,13 @@
-<mvc:View controllerName="CEMOSA.ZYBC_probando.controller.App" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" displayBlok="true">
-	<Shell id="shell">
-		<App id="app" class="myAppDemoWT">
-			<pages>
-				<Page id="page" title="{i18n>homePageTitle}">
-					<content>
+<mvc:View 
+			controllerName="CEMOSA.ZYBC_probando.controller.App" 
+			xmlns:mvc="sap.ui.core.mvc" 
+			xmlns="sap.m" 
+			displayBlok="true">
+	<!--<Shell id="shell">-->
+	<!--	<App id="app" class="myAppDemoWT">-->
+	<!--		<pages>-->
+	<!--			<Page id="page" title="{i18n>homePageTitle}">-->
+	<!--				<content>-->
 						<!--<Panel headerText="{i18n>helloPanelTitle}" class="sapUiResponsiveMargin" width="auto">-->
 						<!--	<Button -->
 						<!--		text="{i18n>showHelloButtonText}" -->
@@ -12,11 +16,14 @@
 						<!--	<Input value="{/recipient/name}" description="Hello {/recipient/name}" valueLiveUpdate="true" width="60%"/>-->
 						<!--	<Text text="Hello {/recipient/name}" class="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/>-->
 						<!--</Panel>-->
-							<mvc:XMLView viewName="CEMOSA.ZYBC_probando.view.HelloPanel"/> 
-							<mvc:XMLView viewName="CEMOSA.ZYBC_probando.view.InvoiceList"/>
-					</content>
-				</Page>
-			</pages>
-		</App>
+	<!--						<mvc:XMLView viewName="CEMOSA.ZYBC_probando.view.HelloPanel"/> -->
+	<!--						<mvc:XMLView viewName="CEMOSA.ZYBC_probando.view.InvoiceList"/>-->
+	<!--				</content>-->
+	<!--			</Page>-->
+	<!--		</pages>-->
+	<!--	</App>-->
+	<!--</Shell>-->
+	<Shell>
+		<App class="myAppDemoWT" id="app"/>
 	</Shell>
 </mvc:View>
