--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -1,9 +1,11 @@
 <mvc:View
+	controllerName="CEMOSA.ZYBC_probando.controller.Detail"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
 	<Page
 		title="{i18n>detailPageTitle}">
 		<ObjectHeader
-			title="Invoice"/>
+			intro="{invoice>ShipperName}"
+			title="{invoice>ProductName}"/>
 	</Page>
 </mvc:View>
