--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -1,7 +1,8 @@
 <mvc:View
 	controllerName="CEMOSA.ZYBC_probando.controller.Detail"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns:wt="CEMOSA.ZYBC_probando.control">
 	<Page
 		title="{i18n>detailPageTitle}"
 		showNavButton="true"
@@ -9,5 +10,6 @@
 		<ObjectHeader
 			intro="{invoice>ShipperName}"
 			title="{invoice>ProductName}"/>
+			<wt:ProductRating id="rating" class="sapUiSmallMarginBeginEnd" change=".onRatingChange"/>
 	</Page>
 </mvc:View>
